{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 44,
  "lineage": "8ad0cd6e-d0cf-218b-ed72-3e9f8534bb66",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "test-ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:218391633802:instance/i-0f59fc6fd730f39f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f59fc6fd730f39f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df20074ea2ecb9c9",
            "private_dns": "ip-10-0-50-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.50.219",
            "public_dns": "ec2-3-81-125-131.compute-1.amazonaws.com",
            "public_ip": "3.81.125.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-044cc9cc7be68f0e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-077e000420cfd531a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05cde8c34a91cfef5",
            "tags": {
              "Name": "test-ec2-subnet-05cde8c34a91cfef5",
              "env": "default"
            },
            "tags_all": {
              "Name": "test-ec2-subnet-05cde8c34a91cfef5",
              "env": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077e000420cfd531a"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub-subnet",
            "module.nw.aws_vpc.my-vpc001",
            "module.sg.aws_security_group.sg_001"
          ]
        },
        {
          "index_key": "test1-ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:218391633802:instance/i-0dafc1dc23b2aad2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dafc1dc23b2aad2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cabf85fb6b3b0172",
            "private_dns": "ip-10-0-72-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.72.64",
            "public_dns": "ec2-44-198-164-82.compute-1.amazonaws.com",
            "public_ip": "44.198.164.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053a26881ce560602",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-077e000420cfd531a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05edc703c16dc6e3f",
            "tags": {
              "Name": "test-ec2-subnet-05edc703c16dc6e3f",
              "env": "default"
            },
            "tags_all": {
              "Name": "test-ec2-subnet-05edc703c16dc6e3f",
              "env": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077e000420cfd531a"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub-subnet",
            "module.nw.aws_vpc.my-vpc001",
            "module.sg.aws_security_group.sg_001"
          ]
        },
        {
          "index_key": "test2-ec2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:218391633802:instance/i-02cf2aa2fd490805f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cf2aa2fd490805f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key001",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f5e3995e9f658fae",
            "private_dns": "ip-10-0-189-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.189.8",
            "public_dns": "ec2-3-82-97-182.compute-1.amazonaws.com",
            "public_ip": "3.82.97.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9d89abd139a4fd4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-077e000420cfd531a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5e20a43bf98b3b1",
            "tags": {
              "Name": "test-ec2-subnet-0b5e20a43bf98b3b1",
              "env": "default"
            },
            "tags_all": {
              "Name": "test-ec2-subnet-0b5e20a43bf98b3b1",
              "env": "default"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-077e000420cfd531a"
            ]
          },
          "dependencies": [
            "module.nw.aws_subnet.pub-subnet",
            "module.nw.aws_vpc.my-vpc001",
            "module.sg.aws_security_group.sg_001"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:internet-gateway/igw-0b1217df5d754cd1d",
            "id": "igw-0b1217df5d754cd1d",
            "owner_id": "218391633802",
            "tags": {
              "Name": "default-igw001",
              "env": "default"
            },
            "tags_all": {
              "Name": "default-igw001",
              "env": "default"
            },
            "vpc_id": "vpc-0fc81af8a7c9072f1"
          },
          "dependencies": [
            "module.nw.aws_vpc.my-vpc001"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b1217df5d754cd1d",
            "id": "r-rtb-0c29cb906c49bd54e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c29cb906c49bd54e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.my-igw",
            "module.nw.aws_route_table.pub-rt",
            "module.nw.aws_vpc.my-vpc001"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:route-table/rtb-0c29cb906c49bd54e",
            "id": "rtb-0c29cb906c49bd54e",
            "owner_id": "218391633802",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default-pub-route001",
              "env": "default"
            },
            "tags_all": {
              "Name": "default-pub-route001",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc81af8a7c9072f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.my-vpc001"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-sub-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceebcc433c363e9d",
            "route_table_id": "rtb-0c29cb906c49bd54e",
            "subnet_id": "subnet-05cde8c34a91cfef5"
          },
          "dependencies": [
            "module.nw.aws_route_table.pub-rt",
            "module.nw.aws_subnet.pub-subnet",
            "module.nw.aws_vpc.my-vpc001"
          ]
        },
        {
          "index_key": "pub-sub-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0151fae088e7fb14b",
            "route_table_id": "rtb-0c29cb906c49bd54e",
            "subnet_id": "subnet-05edc703c16dc6e3f"
          },
          "dependencies": [
            "module.nw.aws_route_table.pub-rt",
            "module.nw.aws_subnet.pub-subnet",
            "module.nw.aws_vpc.my-vpc001"
          ]
        },
        {
          "index_key": "pub-sub-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049087ae05720d3ec",
            "route_table_id": "rtb-0c29cb906c49bd54e",
            "subnet_id": "subnet-0b5e20a43bf98b3b1"
          },
          "dependencies": [
            "module.nw.aws_route_table.pub-rt",
            "module.nw.aws_subnet.pub-subnet",
            "module.nw.aws_vpc.my-vpc001"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:subnet/subnet-05cde8c34a91cfef5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cde8c34a91cfef5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218391633802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-pub-snets"
            },
            "tags_all": {
              "Name": "default-pub-snets"
            },
            "vpc_id": "vpc-0fc81af8a7c9072f1"
          },
          "dependencies": [
            "module.nw.aws_vpc.my-vpc001"
          ]
        },
        {
          "index_key": "pub-sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:subnet/subnet-05edc703c16dc6e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05edc703c16dc6e3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218391633802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-pub-snets"
            },
            "tags_all": {
              "Name": "default-pub-snets"
            },
            "vpc_id": "vpc-0fc81af8a7c9072f1"
          },
          "dependencies": [
            "module.nw.aws_vpc.my-vpc001"
          ]
        },
        {
          "index_key": "pub-sub-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:subnet/subnet-0b5e20a43bf98b3b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5e20a43bf98b3b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218391633802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default-pub-snets"
            },
            "tags_all": {
              "Name": "default-pub-snets"
            },
            "vpc_id": "vpc-0fc81af8a7c9072f1"
          },
          "dependencies": [
            "module.nw.aws_vpc.my-vpc001"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:vpc/vpc-0fc81af8a7c9072f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be99198234192b71",
            "default_route_table_id": "rtb-0b41f60a01714e801",
            "default_security_group_id": "sg-0c823f528dbd2862a",
            "dhcp_options_id": "dopt-027c259d7e0f681b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc81af8a7c9072f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b41f60a01714e801",
            "owner_id": "218391633802",
            "tags": {
              "Name": "default-dev-vpc",
              "env": "default"
            },
            "tags_all": {
              "Name": "default-dev-vpc",
              "env": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218391633802:security-group/sg-077e000420cfd531a",
            "description": "test1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077e000420cfd531a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test1",
            "name_prefix": "",
            "owner_id": "218391633802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc81af8a7c9072f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.my-vpc001"
          ]
        }
      ]
    }
  ]
}